tests/diagnostics/unknown_escape.kal
# Only \n \t \r \0 \\ \" are valid escapes.
prints("bad \q escape");
